--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-This project is a collection of useful java tools and code that I decided to share.
+This project is a collection of useful java tools and code that I decided to share. 
 
-FairytellerUtilities: that I commonly use for work and for other things.
+This is VERY MUCH a work in progress as I collect those from my existing projects.
+
+FairytellerSwing: convenience classes for Swing GUI application
+FairytellerUtilities: tools that I commonly use for work and for other things.
 
 Use at your own discretion, I don't mind.
